--- a/about.html
+++ b/about.html
@@ -122,6 +122,11 @@
             <p class="py-3">
               I completed a Bachelor of Science (Hons) degree in Information Technology with a specialization in Software Engineering from the Sri Lanka Institute of Information Technology (SLIIT). I have hands-on experience in designing and developing applications and systems using a variety of programming languages and technologies, including MERN , HTML/CSS, JavaScript, PHP and Java. I am now seeking a role in the software industry to further enhance my skills and contribute to innovative projects.
             </p>
+             <!-- Add the Download CV Button here -->
+             <a href="assets/docs/CV.pdf" class="btn btn-primary" download="Thushni_Perera_CV.pdf">
+              <i class="bi bi-download"></i> Download CV
+            </a>
+            
           </div>
         </div>
 
