--- a/portfolio.html
+++ b/portfolio.html
@@ -198,11 +198,9 @@
     <div class="container">
       <h3 class="sitename">Thushni Perera</h3>
    
-        <a href=""><i class="bi bi-twitter-x"></i></a>
-        <a href=""><i class="bi bi-facebook"></i></a>
-        <a href=""><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-skype"></i></a>
-        <a href=""><i class="bi bi-linkedin"></i></a>
+      <a href="https://github.com/Thushni"><i class="bi bi-github"></i> </a>
+      <a href="https://web.facebook.com/profile.php?id=61561270852930"><i class="bi bi-facebook"></i></a>
+      <a href="https://www.linkedin.com/in/thushni-perera-5b7736246/"><i class="bi bi-linkedin"></i></a>
       </div>
      
     </div>
