--- a/about.html
+++ b/about.html
@@ -214,11 +214,9 @@
       <h3 class="sitename">Thushni Perera</h3>
     
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-twitter-x"></i></a>
-        <a href=""><i class="bi bi-facebook"></i></a>
-        <a href=""><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-skype"></i></a>
-        <a href=""><i class="bi bi-linkedin"></i></a>
+        <a href="https://github.com/Thushni"><i class="bi bi-github"></i> </a>
+        <a href="https://web.facebook.com/profile.php?id=61561270852930"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.linkedin.com/in/thushni-perera-5b7736246/"><i class="bi bi-linkedin"></i></a>
       </div>
      
     </div>
