--- a/about.html
+++ b/about.html
@@ -99,7 +99,8 @@
           <div class="col-lg-8 content">
             <h2>Full Stack Developer </h2>
             <p class="fst-italic py-3">
-              I’m a software engineering undergraduate passionate about creating innovative web and mobile apps that solve real-world problems. 
+              I'm a software developer with expertise in MERN. I'm passionate about building innovative web and mobile applications that help solve real-world problems.
+              I have hands-on experience in designing and developing applications and systems using a variety of programming languages and technologies, including MERN , HTML/CSS, JavaScript, PHP and Java. I am now seeking a role in the software industry to further enhance my skills and contribute to innovative projects.
             </p>
             <div class="row">
               <div class="col-lg-6">
